test/files/neg/t8012.check
t8012.scala:4: error: class type required but p.C[_] found
  object `package` extends C[_]
                           ^
one error found
